# poultry_farm_server_rust_version

./: .gitignore  Cargo.toml  README.MD
migrations/: 20230530172208_poultryfarm.sql  20230606201613_poultry_farm.sql
src/: email.rs  farm.rs  lib.rs  main.rs  user.rs  validate_session.rs
src/auth/: login.rs  login_user.rs  logout_user.rs  mod.rs  register.rs  session.rs
src/email/: generate_code.rs  welcome.rs
src/farm/: all_farms.rs  new_farm.rs  show_farm.rs
src/middleware/: session.rs
src/resources/farm/: all.rs  delete.rs  mod.rs  new.rs
src/user/: activate.rs  create_user.rs  login_user.rs  logout_user.rs  mod.rs  verify.rs
