[package]
name = "poultry_farm_server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.17.0"
axum = "0.6.18"
shuttle-axum = "0.17.0"
tokio = "1.28.1"
shuttle-secrets = "0.17.0"
sqlx = { version = "0.6.3", features=["runtime-tokio-native-tls" , "postgres"] }
bcrypt = "0.14.0"
serde = "1.0.163"
rand = "0.8.5"
axum-extra = {version="0.7.4", features=["cookie"]}
lettre = "0.10.4"
